fixed mentions legales col and spacing

--- a/simple_page/simple_page.css
+++ b/simple_page/simple_page.css
@@ -32,7 +32,7 @@ a:hover {
 /*SECTION*/
 
 section.section-title {
-  padding: 60px 0;
+  padding: 60px 0 30px;
 }
 
 section h2 {
